[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/goal.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Levels/Level_5.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Box.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonte_objetivo.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Blocks/Sinais/Igual - Block.png" type="Texture" id=10]
[ext_resource path="res://Assets/Blocks/Sprite - Block/Haiiro - Block.png" type="Texture" id=11]
[ext_resource path="res://Assets/Blocks/Valor/Voce - Block.png" type="Texture" id=12]
[ext_resource path="res://Assets/Blocks/Sprite - Block/Caixa - Block.jpg" type="Texture" id=13]
[ext_resource path="res://Scenes/Comands.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 6 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( -5.94475e-06, -136 )
b = Vector2( 0, 184 )

[node name="Level_7" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Player2" type="KinematicBody2D" parent="." groups=["Invisible", "player"]]
visible = false
position = Vector2( 128, 32 )
script = ExtResource( 5 )

[node name="Player" type="Sprite" parent="Player2"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="Player2"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 16 )

[node name="Tween" type="Tween" parent="Player2"]

[node name="Pressure_Plate" type="Sprite" parent="."]
position = Vector2( 184, 72 )
texture = ExtResource( 13 )

[node name="Area2D" type="Area2D" parent="Pressure_Plate"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pressure_Plate/Area2D"]
shape = SubResource( 2 )

[node name="Box" parent="." instance=ExtResource( 7 )]

[node name="Goal" type="Sprite" parent="."]
position = Vector2( 8, 72 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Goal" type="Area2D" parent="Goal"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal/Goal"]
shape = SubResource( 4 )

[node name="Wall" parent="Goal/Goal" instance=ExtResource( 9 )]
position = Vector2( -303.996, 589.652 )

[node name="Popup" type="Popup" parent="Goal"]
margin_left = 199.991
margin_top = -1514.34
margin_right = 365.991
margin_bottom = -1474.34

[node name="RichTextLabel" type="RichTextLabel" parent="Goal/Popup"]
margin_left = 28.0
margin_top = 9.0
margin_right = 128.0
margin_bottom = 36.0
text = "	Parabeins"

[node name="Goal2" type="Sprite" parent="."]
position = Vector2( 8, 56 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Goal" type="Area2D" parent="Goal2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal2/Goal"]
shape = SubResource( 4 )

[node name="Wall" parent="Goal2/Goal" instance=ExtResource( 9 )]
position = Vector2( -303.996, 589.652 )

[node name="Wall" parent="." instance=ExtResource( 9 )]
position = Vector2( -16, 64 )

[node name="Wall2" parent="." instance=ExtResource( 9 )]
position = Vector2( -16, 48 )

[node name="WorldWall" type="Node" parent="." groups=["Stop"]]

[node name="Area2D" type="StaticBody2D" parent="WorldWall" groups=["Stop"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWall/Area2D"]
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldWall/Area2D"]
position = Vector2( 320, 0 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldWall/Area2D"]
position = Vector2( 184, 0 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldWall/Area2D"]
position = Vector2( 184, 176 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Blocks" type="Node" parent="."]

[node name="Blocos a fazer" type="RichTextLabel" parent="Blocks"]
margin_left = 184.0
margin_top = 8.0
margin_right = 336.0
margin_bottom = 40.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Parede =  Pare
Caixa = Empurrar
QuadradoV = Meta"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Haiiro" type="Node" parent="Blocks"]

[node name="Igual-Block" type="Sprite" parent="Blocks/Haiiro"]
position = Vector2( 152, 16 )
texture = ExtResource( 10 )

[node name="Haiiro-Block" type="Sprite" parent="Blocks/Haiiro"]
position = Vector2( 136, 16 )
texture = ExtResource( 11 )

[node name="Voce-Block" type="Sprite" parent="Blocks/Haiiro"]
position = Vector2( 168, 16 )
texture = ExtResource( 12 )

[node name="Objetivo" type="RichTextLabel" parent="."]
margin_right = 128.0
margin_bottom = 32.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Objetivo:
  Chegar na meta
com os dois personagens"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Comands" parent="." instance=ExtResource( 14 )]

[connection signal="body_entered" from="Pressure_Plate/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Pressure_Plate/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Goal/Goal" to="." method="_on_Goal_body_entered"]
[connection signal="body_exited" from="Goal/Goal" to="." method="_on_Goal_body_exited"]
[connection signal="body_entered" from="Goal2/Goal" to="." method="_on_Goal_body_entered"]
[connection signal="body_exited" from="Goal2/Goal" to="." method="_on_Goal_body_exited"]
